updated thank you for pay with cash

--- a/src/app/paymentform/paymentform.component.html
+++ b/src/app/paymentform/paymentform.component.html
@@ -46,7 +46,7 @@
 </table> -->
 
 <div>
-  <button mat-raised-button class="payBtn" routerLink="/paymentsuccess">Pay with Cash</button>
+  <button mat-raised-button class="payBtn" routerLink="/paymentthankyou">Pay with Cash</button>
   <h1 class="ortxt">OR</h1>
   <div class="paypalBtn" id="myPaypalButtons"></div>
 </div>
