--- a/src/app/paymentthankyou/paymentthankyou.component.html
+++ b/src/app/paymentthankyou/paymentthankyou.component.html
@@ -8,14 +8,13 @@
    <div>
         <mat-icon class="check">check_circle</mat-icon>
    </div>
-   <h1 class="successtxt">Payment Success!</h1>
+   <h1 class="successtxt">Thank You for Booking!</h1>
   
    <div class="description">
     <p class="description1">Service request ID: XXXXXX </p>
     <p class="description2">Your service request is pending.</p>
     <p class="description2">Please wait for the admin to approve your request.</p>
     <p class="description3">It could take a few minutes to show up in your dashboard.</p>
-    
   </div>
 
 
