--- a/src/app/paymentform/paymentform.component.html
+++ b/src/app/paymentform/paymentform.component.html
@@ -9,7 +9,7 @@
   </div>
 
   <div class="pending">
-    <h1 class="pendingtxt">Booking details confirmed!</h1>
+    <h1 class="pendingtxt">Booking Details Confirmed!</h1>
   </div>
 
   <div class="description">
