--- a/src/app/reschedule/reschedule.component.html
+++ b/src/app/reschedule/reschedule.component.html
@@ -52,7 +52,7 @@
 
   <div>
     <button mat-raised-button class="reschedBtn" type="submit" [disabled]="!scheduleForm.valid">Reschedule Request</button>
-    <button mat-raised-button class="cancelBtn" (click)="getConfirmation()">Cancel Request</button>
+    <button mat-raised-button class="cancelBtn" (click)="getConfirmation()">Back</button>
   </div>
 </form>
 </mat-card>
