--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -71,12 +71,12 @@
       <mat-tab label="Pending Requests">
         <mat-card class="pendingcard">
           <h2 class="request">Pending Requests</h2>
-          <mat-form-field class="searchfield" appearance="outline">
+         <!-- <mat-form-field class="searchfield" appearance="outline">
             <mat-label>
               <mat-icon>find_in_page</mat-icon>Search..
             </mat-label>
             <input matInput>
-          </mat-form-field>
+          </mat-form-field>-->
           <div class="table">
             <table>
               <thead>
@@ -93,7 +93,7 @@
                   <td>{{sr.service_appliance}}</td>
                   <td>{{sr.service_type}}</td>
                   <td>{{sr.status}}</td>
-                  <td><button mat-raised-button>Details</button></td>
+                  <td><button mat-raised-button routerLink="/requestdetails">Details</button></td>
                 </tr>
               </tbody>
             </table>
@@ -104,12 +104,12 @@
       <mat-tab label="Completed Requests">
         <mat-card class="pendingcard">
           <h2 class="request">Completed Requests</h2>
-          <mat-form-field class="searchfield" appearance="outline">
+           <!-- <mat-form-field class="searchfield" appearance="outline">
             <mat-label>
               <mat-icon>find_in_page</mat-icon>Search..
             </mat-label>
             <input matInput>
-          </mat-form-field>
+          </mat-form-field>-->
           <div class="table">
             <table>
               <thead>
@@ -137,12 +137,12 @@
       <mat-tab label="Cancelled Requests">
         <mat-card class="pendingcard">
           <h2 class="request">Cancelled Requests</h2>
-          <mat-form-field class="searchfield" appearance="outline">
+           <!-- <mat-form-field class="searchfield" appearance="outline">
             <mat-label>
               <mat-icon>find_in_page</mat-icon>Search..
             </mat-label>
             <input matInput>
-          </mat-form-field>
+          </mat-form-field>-->
           <div class="table">
             <table>
               <thead>
