--- a/src/app/paymentthankyou/paymentthankyou.component.css
+++ b/src/app/paymentthankyou/paymentthankyou.component.css
@@ -64,6 +64,7 @@
     color: #007f5f;
     font-size: 28px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-top: 100px;
     margin-left: 220px;
 }
 
@@ -81,8 +82,8 @@
   mat-icon
   {
     font-size: 25px;
-    float: right;
-    margin-right: 50px;
+    float: left;
+    margin-left: 50px;
     color: #003049;
   }
   
