--- a/src/app/requestdetails/requestdetails.component.html
+++ b/src/app/requestdetails/requestdetails.component.html
@@ -1,5 +1,106 @@
-<div class="details">
-    <h1 class="title">Request Details</h1>
+
+  <!--HEADER------------------------------------------------>
+  <mat-toolbar>
+    <h1 class="ayosgamit">Ayosgamit</h1>
+  </mat-toolbar>
+  <div class="container">
+    <!--REQUEST SUMMARY------------------------------------------------>
+    <div>
+   
+     <div>
+      <button mat-raised-button (click)="getConfirmation()" class="cancelBtn">Cancel Request</button>
+      <button mat-raised-button class="reschedBtn" routerLink="/reschedule">Reschedule Request</button>
+     </div>
+
+    <mat-card class="summary">
+      <div>
+        <mat-icon class="icon">description<h1 class="title">Request Details</h1>
+        </mat-icon>
+      </div>
+      <h1 class="personalinfotxt">Personal Information</h1>
+      <table class="table" *ngFor="let sr of service_request">
+        <thead>
+          <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Contact Number</th>
+            <th>Address</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>{{sr.service_firstname}}</td>
+            <td>{{sr.service_lastname}}</td>
+            <td>{{sr.service_phoneNumber}}</td>
+            <td>{{sr.service_address}}</td>
+          </tr>
+        </tbody>
+        <thead>
+          <tr>
+            <th>Address Details</th>
+            <th>City</th>
+            <th>Property Type</th>
+            <th>Zip Code</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>{{sr.service_addressDetails}}</td>
+            <td>{{sr.service_city}}</td>
+            <td>{{sr.service_property_type}}</td>
+            <td>{{sr.service_zipcode}}</td>
+          </tr>
+        </tbody>
+      </table>
+
+      <h1 class="serviceinfotxt">Service Information</h1>
+      <table class="table" *ngFor="let sr of service_request">
+        <thead>
+          <tr>
+            <th>Appliance</th>
+            <th>Service</th>
+            <th>Brand</th>
+            <th>Unit Type</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>{{sr.service_appliance}}</td>
+            <td>{{sr.service_type}}</td>
+            <td>{{sr.service_brand}}</td>
+            <td>{{sr.service_unitType}}</td>
+          </tr>
+        </tbody>
+        <thead>
+          <tr>
+            <th>Unit Problem</th>
+            <th>Scheduled Date</th>
+            <th>Time Slot</th>
+            <th>Instruction</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>{{sr.service_unitProb}}</td>
+            <td>{{sr.service_date | date}}</td>
+            <td>{{sr.service_timeslot}}</td>
+            <td>{{sr.service_instruction}}</td>
+          </tr>
+        </tbody>
+      </table>
+  
+      <div>
+        <button mat-raised-button class="proceedBtn" routerLink="/dashboard">Done</button>
+      </div>
+    </mat-card>
+  </div>
+    <!--PAYMENT SUMMARY------------------------------------------------>
+   
 
     
-</div>
+  </div>
+
+    
+      
+    
+
