back buttons in each services and appliances, have data in edit textfields and service requests contact details specifically

--- a/src/app/aircon-cleaning/aircon-cleaning.component.html
+++ b/src/app/aircon-cleaning/aircon-cleaning.component.html
@@ -108,9 +108,9 @@
           </div> -->
 
             <!--Back and Next Button-->
+            <button class="backBtn" mat-button routerLink="/cleaning">Back</button>
             <button class="nextBtn" type="submit" [disabled]="!unitdetailsForm.valid" mat-button
-              matStepperNext>Next</button><br><br><br><br>
-            <br><br>
+              matStepperNext>Next</button>
           </form>
         </div>
       </mat-step>
