--- a/src/app/appliances/appliances.component.html
+++ b/src/app/appliances/appliances.component.html
@@ -46,9 +46,11 @@
       <h1 class="ayosgamit">Ayosgamit</h1>
       <span class="spacer"></span>
     </mat-toolbar>
+    <h1 class="backBtn" routerLink="/booking">
+      <mat-icon class="returnIcon"><b>keyboard_return</b></mat-icon>Back to Services
+    </h1>
     <h1 class="h1title">Appliance to Repair</h1>
     <hr>
-
     <div class="allservices">
       <mat-card class="airconcard">
         <mat-card-content>
@@ -90,5 +92,6 @@
         </mat-card-content>
       </mat-card>
     </div>
+
   </mat-sidenav-content>
 </mat-sidenav-container>
