--- a/src/app/aircon-install/aircon-install.component.html
+++ b/src/app/aircon-install/aircon-install.component.html
@@ -105,9 +105,9 @@
           </div> -->
 
             <!--Back and Next Button-->
+            <button class="backBtn" mat-button routerLink="/installation">Back</button>
             <button class="nextBtn" type="submit" [disabled]="!unitdetailsForm.valid" mat-button
-              matStepperNext>Next</button><br><br><br><br>
-            <br><br>
+              matStepperNext>Next</button>
           </form>
         </div>
       </mat-step>
