--- a/src/app/bookingform/bookingform.component.css
+++ b/src/app/bookingform/bookingform.component.css
@@ -219,6 +219,19 @@
     margin-top: 100px;
     text-align: center;
 }
+.backBtn{
+  font-size: 20px;
+  float: left;
+  margin-top: 50px;
+  margin-left: 100px;
+  color: #003049;
+}
+.returnIcon
+{
+  font-size: 20px;
+  top: 10;
+  color: #003049;
+}
 }
 @media (max-width: 576px)
 {
