--- a/src/app/electricfandetails/electricfandetails.component.html
+++ b/src/app/electricfandetails/electricfandetails.component.html
@@ -119,6 +119,7 @@
           </div> -->
 
             <!--Back and Next Button-->
+            <button class="backBtn" mat-button routerLink="/appliance">Back</button>
             <button class="nextBtn" type="submit" [disabled]="!unitdetailsForm.valid" mat-button
               matStepperNext>Next</button>
           </form>
