--- a/src/app/refrigeratordetails/refrigeratordetails.component.html
+++ b/src/app/refrigeratordetails/refrigeratordetails.component.html
@@ -57,7 +57,6 @@
             </div>
             </mat-card>
 
-
             <mat-card class="unitdetailscard">
               <div>
                 <h1 class="unitdetails">Unit Details</h1>
@@ -119,9 +118,9 @@
             </button>
           </div> -->
             <!--Back and Next Button-->
+            <button class="backBtn" mat-button routerLink="/appliance">Back</button>
             <button class="nextBtn" type="submit" [disabled]="!unitdetailsForm.valid" mat-button
-              matStepperNext>Next</button><br><br><br><br>
-            <br><br>
+              matStepperNext>Next</button>
           </form>
         </div>
       </mat-step>
