--- a/src/app/televisiondetails/televisiondetails.component.html
+++ b/src/app/televisiondetails/televisiondetails.component.html
@@ -105,9 +105,9 @@
               </button>
             </div> -->
             <!--Back and Next Button-->
+            <button class="backBtn" mat-button routerLink="/appliance">Back</button>
             <button class="nextBtn" type="submit" [disabled]="!unitdetailsForm.valid" mat-button
-              matStepperNext>Next</button><br><br><br><br>
-            <br><br>
+              matStepperNext>Next</button>
           </form>
         </div>
       </mat-step>
@@ -166,8 +166,7 @@
             <!--Back and Next Button-->
             <button class="backBtn" mat-button matStepperPrevious>Back</button>
             <button class="nextBtn" type="submit" [disabled]="!locationForm.valid" mat-button
-              matStepperNext>Next</button><br><br><br><br>
-            <br><br>
+              matStepperNext>Next</button>
           </form>
         </div>
       </mat-step>
