--- a/src/app/washingmachine-install/washingmachine-install.component.html
+++ b/src/app/washingmachine-install/washingmachine-install.component.html
@@ -93,9 +93,9 @@
                 </button>
               </div> -->
             <!--Back and Next Button-->
+            <button class="backBtn" mat-button routerLink="/installation">Back</button>
             <button class="nextBtn" type="submit" [disabled]="!unitdetailsForm.valid" mat-button
-              matStepperNext>Next</button><br><br><br><br>
-            <br><br>
+              matStepperNext>Next</button>
           </form>
         </div>
       </mat-step>
@@ -154,8 +154,7 @@
             <!--Back and Next Button-->
             <button class="backBtn" mat-button matStepperPrevious>Back</button>
             <button class="nextBtn" type="submit" [disabled]="!locationForm.valid" mat-button
-              matStepperNext>Next</button><br><br><br><br>
-            <br><br>
+              matStepperNext>Next</button>
           </form>
         </div>
       </mat-step>
