--- a/src/app/technicians/technicians.component.html
+++ b/src/app/technicians/technicians.component.html
@@ -72,7 +72,7 @@
               <button mat-menu-item>Active</button>
               <button mat-menu-item>Inactive</button>
             </mat-menu>
-            <button mat-flat-button class="profileBtn1" (click)="TechprofileOpenDialog()">Profile</button>
+            <button mat-flat-button class="profileBtn1" [routerLink]="['/technician/' + tech._id]">Profile</button>
             <button mat-icon-button class="editBtn1" [matMenuTriggerFor]="editmenu">
               <mat-icon>more_vert</mat-icon>
             </button>
