--- a/src/app/techprofile/techprofile.component.html
+++ b/src/app/techprofile/techprofile.component.html
@@ -1,16 +1,14 @@
 <html>
     <body>
         <div class="mat-dialog-content">
-            
-            <h1 class="techname">Juan Dela Cruz</h1>
-            <h2 class="position">Appliances Repair</h2>
+            <h1 class="techname">{{data.fullname}}</h1>
+            <h2 class="position">{{data.specialization}}</h2>
 
             <p class="contactnumber">Contact Number</p>
-            <p class="number">09XXXXXXXX</p>
+            <p class="number">{{data.number}}</p>
 
             <p class="address">Home Address</p>
-            <p class="add">Blk 13 Lot 6, Manila City</p>
-    
+            <p class="add">{{data.address}}</p>
         </div>
 
     </body>
