--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -1,29 +1,13 @@
 @media (min-width: 820px)
 {
-    .sidenav-container {
-        height: 100%;
-      }
-      
-      .sidenav{
-        width: fit-content;
-        width: 280px;
-        background-color: #EAE2B7;
-      }
-      
-      .mat-sidenav-content{
-         height: 910px;
-         background-color: white;
-      }
-      
-      .mat-toolbar{
-        background-color: #D62828;
-        width: 100%;
-      }
-      
-      .logo{
-        width: 60%;
-        height: 18%;
-        margin-left: 60px;
+    
+    
+    .logo{
+
+        width: 30% !important;
+        height: 20% !important;
+        margin-left: 80px !important;
+        margin-top: 10px !important;
       }
       
       .nav-icon{
@@ -34,7 +18,7 @@
       }
     body
     {
-        background-image: url('../../assets/homebg.jpg');
+        
         background-size: cover;
         text-align: center;
         width: 100%;
@@ -42,6 +26,11 @@
         background-attachment: fixed;
     }
 
+  mat-toolbar
+  {
+      width: 100%;
+      height: 10%;
+  }
     .logo
     {
         width: 10%;
@@ -51,98 +40,165 @@
         margin-top: 20px;
     }
 
+    .content
+    {
+        
+       float: left;
+       margin-left: 380px;
+       margin-top: 250px;
+        
+    }
     
-.content
+    .title1
+    {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #003049;
+        float: left;
+        font-size: 35px;
+        margin-left: 10px;
+    }
+    
+    .title2
+    {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #003049;
+        float: left;
+        font-size: 35px;
+        margin-left: -372px;
+        margin-top: 35px;
+    }
+
+    .bookBtn
 {
-  
+    width: 150px;
+    height: 50px;
     float: left;
-    margin-left: -750px;
-    margin-top: 350px;
-    
+    margin-left: -480px;
+    margin-top: 350px !important;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #dd0346;
+    color: #FFFFFF;
+    text-decoration: none !important;
+    border-radius: 3px;
+    font-size: 18px;
 }
 
-.title1
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #FFFFFF;
-    float: left;
-    font-size: 35px;
-    margin-left: 10px;
+.bookBtn:hover, .bookBtn:active {
+    color:#ffb5a7;
 }
 
-.title2
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #FFFFFF;
-    float: left;
-    font-size: 35px;
-    margin-left: -370px;
-    margin-top: 35px;
-}
+    .image1
+    {
+        width: 30%;
+        height: 30%;
+        float: right;
+        margin-right: 170px;
+        margin-top: -250px;
+
+    }
+
+    .image2
+    {
+        width: 30%;
+        height: 30%;
+        float: left;
+        margin-left: 900px;
+        margin-top: -310px;
+      
+        
+        
+    }
+
+
 
 .pricingBtn
 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #FFFFFF;
+    color: #003049;
     float: left;
-    margin-left: 100px;
-    margin-top: 80px;
+    margin-left: -135px;
+    margin-top: 20px;
     font-size: 17px;
     
+}
+
+.pricingBtn:hover, .pricingBtn:active {
+    color:#dd0346;
 }
 
 .contactUsBtn
 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #FFFFFF;
+    color: #003049;
     font-size: 17px;
     float: left;
-    margin-left: 100px;
-    margin-top: 80px;
+    margin-left: 25px;
+    margin-top: 20px;
+}
+
+.contactUsBtn:hover, .contactUsBtn:active {
+    color:#dd0346;
 }
 
 .aboutusBtn
 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #FFFFFF;
+    color: #003049;
     font-size: 17px;
     float: left;
     margin-left: 100px;
-    margin-top: 80px;
+    margin-right: 700px;
+    margin-top: 20px;
+}
+
+.aboutusBtn:hover, .aboutusBtn:active {
+    color:#dd0346;
 }
 
 .menuBtn
 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #FFFFFF;
+    color: #003049;
     font-size: 17px;
     float: left;
-    margin-left: 100px;
-    margin-top: 80px;
+    margin-left: -350px;
+    margin-top: 20px;
 }
 
-.bookBtn
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #FFFFFF;
-    color: #D62828;
-    text-decoration: none !important;
-    border-radius: 3px;
-    float: left;
-    margin-left: -730px;
-    margin-top: 450px;
-    font-size: 15px;
+.menuBtn:hover, .menuBtn:active {
+    color:#dd0346;
 }
-.inquireBtn
+
+.loginBtn
 {
+    float: right !important;
+    margin-top: 13px !important;
+    width: 140px;
+    height: 40px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #D62828;
+    background-color: #dd0346;
     color: #FFFFFF;
-    float: left;
-    margin-left: -580px;
-    margin-top: 450px;
     font-size: 15px;
 }
+
+.loginBtn:hover, .loginBtn:active {
+    color:#f9dcc4;
+}
+mat-icon
+{
+    font-size: 20px;
+}
+
+.headertxt
+{
+    position: center !important;
+    margin-top: 900px !important;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 30px;
+    color: #003049;
+   
+}
+
 .footer
 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -153,6 +209,104 @@
 }
 }
 
+.bookimg
+{
+    width: 15%;
+    height: 20%;
+    float: left;
+    margin-left: 400px;
+    
+}
+
+.booktxt
+{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    color: #003049;
+    margin-top: 10px;
+    float: left;
+    margin-left: 470px;
+}
+
+.booklabel
+{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 17px;
+    color: #003049;
+    text-align: center;
+    margin-top: 10px;
+    float: left;
+    margin-left: 430px;
+}
+.connectimg
+{
+    width: 15%;
+    height: 20%;
+    float: left;
+    margin-left: 130px;
+   
+}
+
+.connecttxt
+{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    color: #003049;
+    margin-top: 10px;
+    float: left;
+    margin-left: 250px;
+}
+
+.connectlabel
+{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 17px;
+    color: #003049;
+    text-align: center;
+    margin-top: 10px;
+    float: left;
+    margin-left: 150px;
+}
+
+.likeimg
+{
+    width: 15%;
+    height: 20%;
+    float: right;
+    margin-right: 450px;
+    
+}
+
+.liketxt
+{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    color: #003049;
+    margin-top: 10px;
+    float: left;
+    margin-left: 190px;
+}
+
+.likelabel
+{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 17px;
+    color: #003049;
+    text-align: center;
+    margin-top: 10px;
+    float: left;
+    margin-left: 130px;
+}
+
+.header2txt
+{
+    position: center !important;
+    margin-top: 600px !important;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 30px;
+    color: #003049;
+   
+}
 @media (max-width: 576px)
 {
 
